tests/baselines/reference/sourceMapValidationLabeled.errors.txt
tests/cases/compiler/sourceMapValidationLabeled.ts(1,1): error TS7028: Unused label.


==== tests/cases/compiler/sourceMapValidationLabeled.ts (1 errors) ====
    x:
    ~
!!! error TS7028: Unused label.
    var b = 10;